--- a/Assignment3/app/src/main/res/layout/tasklist_item.xml
+++ b/Assignment3/app/src/main/res/layout/tasklist_item.xml
@@ -9,25 +9,26 @@
         android:id="@+id/textViewPriority"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginEnd="14dp"
         android:textAlignment="center"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewState"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textViewDescription"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Priority" />
 
     <TextView
         android:id="@+id/textViewDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:textAlignment="center"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewState"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textViewEmoji"
-        app:layout_constraintTop_toTopOf="@+id/textViewPriority"
+        app:layout_constraintStart_toEndOf="@+id/textViewPriority"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Description" />
 
     <TextView
@@ -35,23 +36,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:textAlignment="center"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewDescription"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewState"
         app:layout_constraintStart_toEndOf="@+id/textViewDescription"
-        app:layout_constraintTop_toTopOf="@+id/textViewDescription"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Emoji" />
 
     <TextView
         android:id="@+id/textViewState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginEnd="14dp"
         android:textAlignment="center"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/textViewDescription"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewPriority"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textViewEmoji"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="State" />
 </androidx.constraintlayout.widget.ConstraintLayout>
