--- a/CryptoAssignment/app/src/main/res/layout/fragment_list.xml
+++ b/CryptoAssignment/app/src/main/res/layout/fragment_list.xml
@@ -4,4 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListFragment"/>
+    tools:context=".ListFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="141dp"
+        tools:layout_editor_absoluteY="206dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
