--- a/CryptoAssignment/app/src/main/res/layout/list_item.xml
+++ b/CryptoAssignment/app/src/main/res/layout/list_item.xml
@@ -3,20 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:context=".list_item">
-
-    <TextView
-        android:id="@+id/textViewLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textSize="36sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Logo" />
 
     <TextView
         android:id="@+id/textViewID"
@@ -26,8 +15,8 @@
         android:layout_marginBottom="4dp"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewPrice"
-        app:layout_constraintStart_toEndOf="@+id/textViewLogo"
-        app:layout_constraintTop_toTopOf="@+id/textViewLogo"
+        app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
+        app:layout_constraintTop_toTopOf="@+id/imageViewLogo"
         tools:text="CoinID" />
 
     <TextView
@@ -36,19 +25,30 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewLogo"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewLogo"
         app:layout_constraintEnd_toEndOf="@+id/textViewID"
         app:layout_constraintStart_toStartOf="@+id/textViewID"
         app:layout_constraintTop_toBottomOf="@+id/textViewID"
         tools:text="Price" />
 
+    <ImageView
+        android:id="@+id/imageViewLogo"
+        android:layout_width="116dp"
+        android:layout_height="112dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/coin_default_detail_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textViewSymbol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:textSize="36sp"
-        app:layout_constraintStart_toEndOf="@+id/textViewID"
-        app:layout_constraintTop_toTopOf="@+id/textViewLogo"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
+        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
         tools:text="Symbol" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
