--- a/CryptoAssignment/app/src/main/res/layout/list_item.xml
+++ b/CryptoAssignment/app/src/main/res/layout/list_item.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:context=".list_item">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textViewID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="5dp"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewPrice"
         app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
@@ -23,20 +22,21 @@
         android:id="@+id/textViewPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewLogo"
-        app:layout_constraintEnd_toEndOf="@+id/textViewID"
-        app:layout_constraintStart_toStartOf="@+id/textViewID"
+        app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
         app:layout_constraintTop_toBottomOf="@+id/textViewID"
         tools:text="Price" />
 
     <ImageView
         android:id="@+id/imageViewLogo"
-        android:layout_width="116dp"
-        android:layout_height="112dp"
+        android:layout_width="57dp"
+        android:layout_height="54dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/image_view_content_description"
         android:src="@drawable/coin_default_detail_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
