--- a/FinalAssignment/app/src/debug/res/values/google_maps_api.xml
+++ b/FinalAssignment/app/src/debug/res/values/google_maps_api.xml
@@ -19,5 +19,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDHf6CqkjYAkgL6lowX_MrwZTsPwFiSw54</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">@string/api_key</string>
 </resources>
